@@ -6,7 +6,6 @@
 #include "dds4ccm/impl/ndds/DataReaderHandler_T.h"
 #include "tao/ORB_Core.h"
 
-// Implementation skeleton constructor
 template <typename DDS_TYPE, typename CCM_TYPE>
 CIAO::DDS4CCM::RTI::SubscriberListener_T<DDS_TYPE, CCM_TYPE>::SubscriberListener_T (
       ::CCM_DDS::ConnectorStatusListener_ptr error_listener)
@@ -15,7 +14,6 @@ CIAO::DDS4CCM::RTI::SubscriberListener_T<DDS_TYPE, CCM_TYPE>::SubscriberListener
   CIAO_TRACE ("CIAO::DDS4CCM::RTI::SubscriberListener_T::SubscriberListener_T");
 }
 
-// Implementation skeleton destructor
 template <typename DDS_TYPE, typename CCM_TYPE>
 CIAO::DDS4CCM::RTI::SubscriberListener_T<DDS_TYPE, CCM_TYPE>::~SubscriberListener_T (void)
 {
@@ -23,9 +21,29 @@ CIAO::DDS4CCM::RTI::SubscriberListener_T<DDS_TYPE, CCM_TYPE>::~SubscriberListene
 }
 
 template <typename DDS_TYPE, typename CCM_TYPE>
+void
+CIAO::DDS4CCM::RTI::SubscriberListener_T<DDS_TYPE, CCM_TYPE>::on_data_on_readers(
+  ::DDS::Subscriber* the_subscriber)
+{
+  try
+    {
+      if (!CORBA::is_nil (this->error_listener_))
+        {
+          this->error_listener_->on_unexpected_status (the_subscriber, ::DDS::DATA_ON_READERS_STATUS);
+        }
+    }
+  catch (...)
+    {
+      CIAO_DEBUG ((LM_DEBUG, ACE_TEXT ("on_data_on_readers::on_data_on_readers: ")
+                             ACE_TEXT ("DDS Exception caught\n")));
+    }
+}
+
+
+template <typename DDS_TYPE, typename CCM_TYPE>
 ::DDS::StatusMask
 CIAO::DDS4CCM::RTI::SubscriberListener_T<DDS_TYPE, CCM_TYPE>::get_mask (void)
 {
-  return DDS_STATUS_MASK_NONE;
+  return DDS_DATA_ON_READERS_STATUS;
 }
 
